--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ requests = "*"
 colorama = "*"
 discord.py = "*"
 pytz = "*"
+random = "*"
+enum = "*"
+datetime = "*"
 
 [dev-packages]
 # Add your development dependencies here, if any.
