about to redo all of this

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+OPEN_WEATHER_API='391c28fa1bffe5bac10ae9e07d85f9e7'
 BOT_TOKEN='MTE0ODI4NzcxMjM5OTQ3ODkxNQ.G432we.zxH2NSi9mF9NWWjNbhHHANMR1vonwvDEm_PWDQ'
